# myRayTracer

./: .gitignore  Bug.md  CMakeLists.txt  README.md  TODO.md
assignment/: week2.md
cuda/: CMakeLists.txt  TODO.md  challenge.md  reference.md  speed_record.txt
cuda/include/: camera.cuh  common.cuh  cudastart.h  cutil_double.cuh  hittable.cuh  hittable_list.cuh  material.cuh  model.cuh  ray.cuh  vec3.cuh
cuda/src/: glad.c  main.cu  sum_mat.cu
include/: WindowsApp.h  aabb.h  aarect.h  box.h  bvh.h  camera.h  common.h  hittable.h  hittable_list.h  material.h  mesh.h  ray.h  scene.h  sphere.h  texture.h  transform.h  triangle.h  vec3.h
notes/: assimp.md  cuda.md  cuda_raytracing.md  pbr.md  pbrt_material.md  render_equation.md  triangle.md
src/: WindowsApp.cpp  main.cpp  scene.cpp
tools/: parse.py
